[package]
name = "oxiide"
version = "0.1.0"
authors = ["Rustem B. <rustemb@systemli.org>"]
edition = "2018"
description = "Lib for WM creation with Elm-like arch"
license = "MIT"
repository = "https://github.com/RustemB/oxiide"
readme = "README.md"
keywords = ["windows-manager"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
